--- a/content.html
+++ b/content.html
@@ -16,7 +16,19 @@
 	</head>
 	<body>
 		<nav></nav>
-		<img src="https://via.placeholder.com/500" alt="" />
+		<header>
+			<div><img src="https://via.placeholder.com/500" alt="" /></div>
+			<div>
+				<h1>Lorem ipsum dolor sit amet</h1>
+				<p>
+					Lorem ipsum dolor sit amet consectetur adipisicing elit.
+					Repudiandae in aliquid alias nesciunt culpa repellat magnam
+					doloremque excepturi laboriosam esse. Ea qui error alias
+					exercitationem in consequatur dolorum, ipsum maiores?
+				</p>
+			</div>
+		</header>
+
 		<script
 			src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
 			integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
