selesai layouting mobile responsive dengan bootstrap

--- a/detail-pages/1.html
+++ b/detail-pages/1.html
@@ -17,14 +17,14 @@
 	<body>
 		<nav></nav>
 		<header class="row">
-			<div class="col-5 text-center">
+			<div class="col-sm-5 vh-25 vh-sm-100 text-center">
 				<img
 					src="https://via.placeholder.com/500"
 					class="rounded container-fluid"
 					alt=""
 				/>
 			</div>
-			<div class="col text-center align-self-sm-center">
+			<div class="col-sm text-center align-self-sm-center">
 				<h1>Lorem ipsum dolor sit amet</h1>
 				<p>
 					Lorem ipsum dolor sit amet consectetur adipisicing elit.
