--- a/detail-pages/1.html
+++ b/detail-pages/1.html
@@ -65,10 +65,19 @@
 				</div>
 			</div>
 		</section>
+		<footer class="row">
+			<div class="footer"></div>
+		</footer>
 		<script
 			src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
 			integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
 			crossorigin="anonymous"
 		></script>
 	</body>
+	<style>
+		footer {
+			background-color: rgb(231, 76, 76);
+			height: 10vh;
+		}
+	</style>
 </html>
