fixed slight right scroll

--- a/detail-pages/1.html
+++ b/detail-pages/1.html
@@ -16,7 +16,7 @@
 	</head>
 	<body>
 		<nav></nav>
-		<header class="row">
+		<header class="row m-0" style="width: 100vw">
 			<div class="col-sm-5 vh-25 vh-sm-100 text-center">
 				<img
 					src="https://via.placeholder.com/500"
@@ -65,8 +65,8 @@
 				</div>
 			</div>
 		</section>
-		<footer class="row">
-			<div class="footer"></div>
+		<footer class="row m-0 p-0">
+			<div class="footer m-0 p-0"></div>
 		</footer>
 		<script
 			src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
