fixed scroll right on desktop view

--- a/detail-pages/1.html
+++ b/detail-pages/1.html
@@ -11,12 +11,13 @@
 			crossorigin="anonymous"
 		/>
 		<link href="./styles/detail-page.css" />
-		<script href="./scripts/content.js"></script>
+		<script href="./scripts/getContent.js" defer></script>
 		<title>Job Advertizing</title>
 	</head>
 	<body>
+		<div id="content-key">1</div>
 		<nav></nav>
-		<header class="row m-0" style="width: 100vw">
+		<header class="row m-0" style="width: 95vw">
 			<div class="col-sm-5 vh-25 vh-sm-100 text-center">
 				<img
 					src="https://via.placeholder.com/500"
