fixed linking script typo

--- a/detail-pages/1.html
+++ b/detail-pages/1.html
@@ -11,7 +11,7 @@
 			crossorigin="anonymous"
 		/>
 		<link href="./styles/detail-page.css" />
-		<script href="./scripts/getContent.js" defer></script>
+		<script src="./scripts/getContent.js" defer></script>
 		<title>Job Advertizing</title>
 	</head>
 	<body>
