added ids for js

--- a/detail-pages/1.html
+++ b/detail-pages/1.html
@@ -18,16 +18,19 @@
 		<div id="content-key">1</div>
 		<nav></nav>
 		<header class="row m-0" style="width: 95vw">
-			<div class="col-sm-5 vh-25 vh-sm-100 text-center">
+			<div id="image" class="col-sm-5 vh-25 vh-sm-100 text-center">
 				<img
 					src="https://via.placeholder.com/500"
 					class="rounded container-fluid"
 					alt=""
 				/>
 			</div>
-			<div class="col-sm text-center align-self-sm-center">
-				<h1>Lorem ipsum dolor sit amet</h1>
-				<p>
+			<div
+				id="image-caption"
+				class="col-sm text-center align-self-sm-center"
+			>
+				<h1 id="title">Lorem ipsum dolor sit amet</h1>
+				<p id="title-desc">
 					Lorem ipsum dolor sit amet consectetur adipisicing elit.
 					Repudiandae in aliquid alias nesciunt culpa repellat magnam
 					doloremque excepturi laboriosam esse. Ea qui error alias
@@ -39,29 +42,33 @@
 			<div>
 				<div class="card m-4">
 					<div class="card-body">
-						<h2 class="card-title">Deskripsi</h2>
-						<p>
-							Lorem ipsum dolor sit amet consectetur adipisicing
-							elit. Veritatis doloribus veniam tempore, provident
-							laborum molestiae placeat corporis consequuntur,
-							dignissimos suscipit necessitatibus. Distinctio
-							delectus sunt mollitia, debitis cupiditate harum
-							excepturi molestias?
-						</p>
-						<p>
-							Lorem ipsum dolor sit amet consectetur, adipisicing
-							elit. Quidem, ratione! Doloribus rerum aliquid nam
-							quidem soluta quibusdam vel error est id fugiat,
-							amet molestias culpa unde ipsam eius sapiente
-							suscipit.
-						</p>
-						<p>
-							Lorem ipsum dolor sit amet consectetur adipisicing
-							elit. Consequuntur cumque modi quo quasi, tenetur
-							laudantium deserunt quam dignissimos nobis eveniet
-							facere vitae! Reiciendis voluptas esse corporis,
-							sapiente error quia provident.
-						</p>
+						<h2 id="content-title" class="card-title">Deskripsi</h2>
+						<div id="content-desc">
+							<p>
+								Lorem ipsum dolor sit amet consectetur
+								adipisicing elit. Veritatis doloribus veniam
+								tempore, provident laborum molestiae placeat
+								corporis consequuntur, dignissimos suscipit
+								necessitatibus. Distinctio delectus sunt
+								mollitia, debitis cupiditate harum excepturi
+								molestias?
+							</p>
+							<p>
+								Lorem ipsum dolor sit amet consectetur,
+								adipisicing elit. Quidem, ratione! Doloribus
+								rerum aliquid nam quidem soluta quibusdam vel
+								error est id fugiat, amet molestias culpa unde
+								ipsam eius sapiente suscipit.
+							</p>
+							<p>
+								Lorem ipsum dolor sit amet consectetur
+								adipisicing elit. Consequuntur cumque modi quo
+								quasi, tenetur laudantium deserunt quam
+								dignissimos nobis eveniet facere vitae!
+								Reiciendis voluptas esse corporis, sapiente
+								error quia provident.
+							</p>
+						</div>
 					</div>
 				</div>
 			</div>
