--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 		<section id="first-content">
 			<div class="container">
 				<div class="row">
-					<div class="col-lg-6 title-content-1">
+					<div class="col-xl-6 title-content-1">
 						<h1>Cari dan temukan pekerjaan yang sesuai dengan keinginanmu
 							<span class="company-name">Job Advertizing.</span>
 						</h1>
@@ -66,7 +66,7 @@
 							<a href="#" class="btn-explore">Show More</a>
 						</div>
 					</div>
-					<div class="col-lg-6 images-content-1">
+					<div class="col-xl-6 images-content-1">
 						<img src="./images/images-content-1.png" alt="Images Content 1">
 					</div>
 				</div>
@@ -108,7 +108,7 @@
 		<section id="footer">
 			<div class="container-fluid">
 				<div class="row">
-					<div class="col-lg-12 footer_text">
+					<div class="col-xl-12 footer_text">
 						<p> Crafted with 
 							<span>
 								<img width="25px" height="auto" src="https://img.icons8.com/fluency/50/000000/filled-like.png"/>
