--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 							<a class="nav-link" href="#">Contact Us</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link btn-login" href="#">Login</a>
+							<a class="nav-link btn-login" href="./login.html">Login</a>
 						</li>
 					</ul>
 				</div>
