integrate with api

--- a/detail-pages/content.html
+++ b/detail-pages/content.html
@@ -16,14 +16,14 @@
 	</head>
 	<body>
 		<!-- header start -->
-		<div id="content-key" style="display: none">1</div>
 		<nav></nav>
 		<header class="row m-0" style="width: 95vw">
-			<div id="image" class="col-sm-5 vh-25 vh-sm-100 text-center">
+			<div class="col-sm-5 vh-25 vh-sm-100 text-center">
 				<img
-					src="https://via.placeholder.com/500"
+					id="image"
 					class="rounded container-fluid"
-					alt=""
+					alt="Job Desc Image"
+					src=""
 				/>
 			</div>
 			<div
