--- a/detail-pages/content.html
+++ b/detail-pages/content.html
@@ -30,13 +30,8 @@
 				id="image-caption"
 				class="col-sm text-center align-self-sm-center"
 			>
-				<h1 id="title">Lorem ipsum dolor sit amet</h1>
-				<p id="title-desc">
-					Lorem ipsum dolor sit amet consectetur adipisicing elit.
-					Repudiandae in aliquid alias nesciunt culpa repellat magnam
-					doloremque excepturi laboriosam esse. Ea qui error alias
-					exercitationem in consequatur dolorum, ipsum maiores?
-				</p>
+				<h1 id="title"></h1>
+				<p id="title-desc"></p>
 			</div>
 		</header>
 		<!-- header end -->
@@ -48,30 +43,9 @@
 					<div class="card-body">
 						<h2 id="content-title" class="card-title">Deskripsi</h2>
 						<div id="content-desc">
-							<p>
-								Lorem ipsum dolor sit amet consectetur
-								adipisicing elit. Veritatis doloribus veniam
-								tempore, provident laborum molestiae placeat
-								corporis consequuntur, dignissimos suscipit
-								necessitatibus. Distinctio delectus sunt
-								mollitia, debitis cupiditate harum excepturi
-								molestias?
-							</p>
-							<p>
-								Lorem ipsum dolor sit amet consectetur,
-								adipisicing elit. Quidem, ratione! Doloribus
-								rerum aliquid nam quidem soluta quibusdam vel
-								error est id fugiat, amet molestias culpa unde
-								ipsam eius sapiente suscipit.
-							</p>
-							<p>
-								Lorem ipsum dolor sit amet consectetur
-								adipisicing elit. Consequuntur cumque modi quo
-								quasi, tenetur laudantium deserunt quam
-								dignissimos nobis eveniet facere vitae!
-								Reiciendis voluptas esse corporis, sapiente
-								error quia provident.
-							</p>
+							<p></p>
+							<p></p>
+							<p></p>
 						</div>
 					</div>
 				</div>
