--- a/detail-pages/content.html
+++ b/detail-pages/content.html
@@ -4,14 +4,21 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+		<!-- bootstrap -->
 		<link
 			href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
 			rel="stylesheet"
 			integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi"
 			crossorigin="anonymous"
 		/>
+
+		<!-- costum css -->
 		<link href="./styles/detail-page.css" />
+
+		<!-- script file -->
 		<script src="./scripts/getContent.js" defer></script>
+
 		<title>Job Advertizing</title>
 	</head>
 	<body>
@@ -42,11 +49,7 @@
 				<div class="card m-4">
 					<div class="card-body">
 						<h2 id="content-title" class="card-title">Deskripsi</h2>
-						<div id="content-desc">
-							<p></p>
-							<p></p>
-							<p></p>
-						</div>
+						<div id="content-desc"></div>
 					</div>
 				</div>
 			</div>
