--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 						<li class="nav-item">
 							<a class="nav-link" href="#">Contact Us</a>
 						</li>
-						<li class="nav-item">
+						<li id="btn-decision" class="nav-item d-flex">
 							<a class="nav-link btn-login" href="./login.html">Login</a>
 						</li>
 					</ul>
@@ -124,7 +124,7 @@
 
 
 		<!-- JS Custom -->
-		<script href="./scripts/script.js"></script>
+		<script src="./scripts/main.js"></script>
 
 		<!-- Bootstrap JS -->
 		<script
