docs: finish logic user login

--- a/login.html
+++ b/login.html
@@ -36,10 +36,10 @@
                             </div>
                             <div class="mb-3">
                                 <label for="exampleInputPassword1" class="form-label">Password</label>
-                                <input type="password" class="form-control" id="exampleInputPassword1" aria-describedby="passwordHelp" placeholder="Masukkan Password Anda">
+                                <input type="password" id="password" class="form-control" id="exampleInputPassword1" aria-describedby="passwordHelp" placeholder="Masukkan Password Anda">
                                 <div id="passwordHelp" class="form-text">We'll never share your password with anyone else.</div>
                             </div>
-                            <button type="submit" class="btn-submit-login">Submit</button>
+                            <button type="submit" class="btn-submit-login" id="btn-submit">Submit</button>
                             
                             <p>
                                 Anda belum punya akun?
@@ -56,7 +56,7 @@
 
 
 		<!-- JS Custom -->
-		<script href="./scripts/script.js"></script>
+		<script src="./scripts/script.js"></script>
 
 		<!-- Bootstrap JS -->
 		<script
