--- a/detail-pages/content.html
+++ b/detail-pages/content.html
@@ -14,7 +14,7 @@
 		/>
 
 		<!-- costum css -->
-		<link href="./styles/detail-page.css" />
+		<link rel="stylesheet" href="detail-pages/styles/detail-page.css" />
 
 		<!-- script file -->
 		<script src="./scripts/getContent.js" defer></script>
@@ -22,8 +22,46 @@
 		<title>Job Advertizing</title>
 	</head>
 	<body>
+		<!-- navbar -->
+		<nav class="navbar navbar-expand-lg">
+			<div class="container">
+				<a class="navbar-brand" href="#">Job Advertizing.</a>
+				<button
+					class="navbar-toggler"
+					type="button"
+					data-bs-toggle="collapse"
+					data-bs-target="#navbarNav"
+					aria-controls="navbarNav"
+					aria-expanded="false"
+					aria-label="Toggle navigation"
+				>
+					<span class="navbar-toggler-icon"></span>
+				</button>
+				<div class="collapse navbar-collapse" id="navbarNav">
+					<ul class="navbar-nav ms-auto">
+						<li class="nav-item">
+							<a class="nav-link" aria-current="page" href="#"
+								>Home</a
+							>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="#">List</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="#">Contact Us</a>
+						</li>
+						<li id="btn-decision" class="nav-item d-flex">
+							<a class="nav-link btn-login" href="./login.html"
+								>Login</a
+							>
+						</li>
+					</ul>
+				</div>
+			</div>
+		</nav>
+		<!-- nav end -->
+
 		<!-- header start -->
-		<nav></nav>
 		<header class="row m-0" style="width: 95vw">
 			<div class="col-sm-5 vh-25 vh-sm-100 text-center">
 				<img
