menu regis final

--- a/regis.html
+++ b/regis.html
@@ -8,7 +8,7 @@
         <title>Job Advertizing</title>
         
 		<!-- CSS -->
-		<link rel="stylesheet" href="./style/style.css">
+		<link rel="stylesheet" href="./styles/regis.css">
 		
 		<!-- Bootstrap CSS -->
 		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
@@ -38,7 +38,7 @@
                             </div>
                             <div class="mb-3">
                                 <label for="exampleInputPassword1" class="form-label">Password</label>
-                                <input type="password" class="form-control" id="exampleInputPassword1" aria-describedby="passwordHelp" placeholder="Masukkan Password Anda">
+                                <input type="password" class="form-control" id="password" aria-describedby="passwordHelp" placeholder="Masukkan Password Anda">
                                 <div id="passwordHelp" class="form-text">We'll never share your password with anyone else.</div>
                             </div>
                             <button type="submit" class="btn-submit-regis">Submit</button>
@@ -58,7 +58,7 @@
 
 
 		<!-- JS Custom -->
-		<script src="./script/script.js"></script>
+		<script src="./scripts/regis.js"></script>
 
 		<!-- Bootstrap JS -->
 		<script
