--- a/regis.html
+++ b/regis.html
@@ -8,7 +8,7 @@
         <title>Job Advertizing</title>
         
 		<!-- CSS -->
-		<link rel="stylesheet" href="./styles/regis.css">
+		<link rel="stylesheet" href="./regisCSS/regis.css">
 		
 		<!-- Bootstrap CSS -->
 		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
@@ -58,7 +58,7 @@
 
 
 		<!-- JS Custom -->
-		<script src="./scripts/regis.js"></script>
+		<script src="./regisJS/regis.js"></script>
 
 		<!-- Bootstrap JS -->
 		<script
