--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		
+
 		<!-- Bootstrap CSS -->
 		<link
 			href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
@@ -14,24 +14,34 @@
 		/>
 
 		<!-- CSS Custom -->
-		<link rel="stylesheet" href="./styles/style.css">
-		
+		<link rel="stylesheet" href="./styles/style.css" />
+		<link rel="stylesheet" href="./styles/navbar.css" />
+
 		<title>Job Advertizing</title>
 	</head>
 	<body>
-		
 		<!-- ------- Navbar ------- -->
-		
+
 		<nav class="navbar navbar-expand-lg">
 			<div class="container">
 				<a class="navbar-brand" href="#">Job Advertizing.</a>
-				<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+				<button
+					class="navbar-toggler"
+					type="button"
+					data-bs-toggle="collapse"
+					data-bs-target="#navbarNav"
+					aria-controls="navbarNav"
+					aria-expanded="false"
+					aria-label="Toggle navigation"
+				>
 					<span class="navbar-toggler-icon"></span>
 				</button>
 				<div class="collapse navbar-collapse" id="navbarNav">
 					<ul class="navbar-nav ms-auto">
 						<li class="nav-item">
-							<a class="nav-link" aria-current="page" href="#">Home</a>
+							<a class="nav-link" aria-current="page" href="#"
+								>Home</a
+							>
 						</li>
 						<li class="nav-item">
 							<a class="nav-link" href="#">List</a>
@@ -40,15 +50,16 @@
 							<a class="nav-link" href="#">Contact Us</a>
 						</li>
 						<li id="btn-decision" class="nav-item d-flex">
-							<a class="nav-link btn-login" href="./login.html">Login</a>
+							<a class="nav-link btn-login" href="./login.html"
+								>Login</a
+							>
 						</li>
 					</ul>
 				</div>
 			</div>
 		</nav>
-		
-		<!-- ------- End Navbar ------- -->
 
+		<!-- ------- End Navbar ------- -->
 
 		<!-- ------- Content 1 ------- -->
 
@@ -56,18 +67,24 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-xl-6 title-content-1">
-						<h1>Cari dan temukan pekerjaan yang sesuai dengan keinginanmu
+						<h1>
+							Cari dan temukan pekerjaan yang sesuai dengan
+							keinginanmu
 							<span class="company-name">Job Advertizing.</span>
 						</h1>
 						<p>
-							Job Advertizing merupakan situs yang menyediakan informasi mengenai lowongan pekerjaan yang ada.
+							Job Advertizing merupakan situs yang menyediakan
+							informasi mengenai lowongan pekerjaan yang ada.
 						</p>
 						<div class="button-explore">
 							<a href="#" class="btn-explore">Show More</a>
 						</div>
 					</div>
 					<div class="col-xl-6 images-content-1">
-						<img src="./images/images-content-1.png" alt="Images Content 1">
+						<img
+							src="./images/images-content-1.png"
+							alt="Images Content 1"
+						/>
 					</div>
 				</div>
 			</div>
@@ -75,26 +92,36 @@
 
 		<!-- ------- End Content 1 ------- -->
 
-
 		<!-- ------- Content 2 ------- -->
 
 		<section id="jumbotron">
 			<div class="container contact-us">
 				<div class="title-contact-us">
-					<h1>Bila anda memiliki pertanyaan, anda bisa menghubungi kami lewat sosial media di bawah ini.</h1>
+					<h1>
+						Bila anda memiliki pertanyaan, anda bisa menghubungi
+						kami lewat sosial media di bawah ini.
+					</h1>
 				</div>
 				<div class="icon-contact-us">
 					<a href="https://www.instagram.com">
-						<img src="https://img.icons8.com/fluency/48/000000/instagram-new.png"/>
+						<img
+							src="https://img.icons8.com/fluency/48/000000/instagram-new.png"
+						/>
 					</a>
 					<a href="https://twitter.com">
-						<img src="https://img.icons8.com/color/48/000000/twitter--v1.png"/>
+						<img
+							src="https://img.icons8.com/color/48/000000/twitter--v1.png"
+						/>
 					</a>
 					<a href="https://www.whatsapp.com">
-						<img src="https://img.icons8.com/color/48/000000/whatsapp--v1.png"/>
+						<img
+							src="https://img.icons8.com/color/48/000000/whatsapp--v1.png"
+						/>
 					</a>
 					<a href="https://mail.google.com">
-						<img src="https://img.icons8.com/color/48/000000/gmail--v1.png"/>
+						<img
+							src="https://img.icons8.com/color/48/000000/gmail--v1.png"
+						/>
 					</a>
 				</div>
 			</div>
@@ -102,18 +129,22 @@
 
 		<!-- ------- End Content 2 ------- -->
 
-
 		<!-- ------- Content 3 ------- -->
 
 		<section id="footer">
 			<div class="container-fluid">
 				<div class="row">
 					<div class="col-xl-12 footer_text">
-						<p> Crafted with 
+						<p>
+							Crafted with
 							<span>
-								<img width="25px" height="auto" src="https://img.icons8.com/fluency/50/000000/filled-like.png"/>
+								<img
+									width="25px"
+									height="auto"
+									src="https://img.icons8.com/fluency/50/000000/filled-like.png"
+								/>
 							</span>
-							by Back-End 10 
+							by Back-End 10
 						</p>
 					</div>
 				</div>
@@ -121,7 +152,6 @@
 		</section>
 
 		<!-- ------- End Content 3 ------- -->
-
 
 		<!-- JS Custom -->
 		<script src="./scripts/main.js"></script>
