added nav style

--- a/detail-pages/content.html
+++ b/detail-pages/content.html
@@ -14,7 +14,8 @@
 		/>
 
 		<!-- costum css -->
-		<link rel="stylesheet" href="detail-pages/styles/detail-page.css" />
+		<link rel="stylesheet" href="./detail-pages/styles/detail-page.css" />
+		<link rel="stylesheet" href="../styles/navbar.css" />
 
 		<!-- script file -->
 		<script src="./scripts/getContent.js" defer></script>
