--- a/detail-pages/content.html
+++ b/detail-pages/content.html
@@ -26,7 +26,9 @@
 		<!-- navbar -->
 		<nav class="navbar navbar-expand-lg">
 			<div class="container">
-				<a class="navbar-brand" href="#">Job Advertizing.</a>
+				<a class="navbar-brand" href="../index.html"
+					>Job Advertizing.</a
+				>
 				<button
 					class="navbar-toggler"
 					type="button"
@@ -41,18 +43,27 @@
 				<div class="collapse navbar-collapse" id="navbarNav">
 					<ul class="navbar-nav ms-auto">
 						<li class="nav-item">
-							<a class="nav-link" aria-current="page" href="#"
+							<a
+								class="nav-link"
+								aria-current="page"
+								href="../index.html"
 								>Home</a
 							>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link" href="#">List</a>
+							<a
+								class="nav-link"
+								href="../list-pages/listContent.html"
+								>List</a
+							>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link" href="#">Contact Us</a>
+							<a class="nav-link" href="../index.html#jumbotron"
+								>Contact Us</a
+							>
 						</li>
 						<li id="btn-decision" class="nav-item d-flex">
-							<a class="nav-link btn-login" href="./login.html"
+							<a class="nav-link btn-login" href="../login.html"
 								>Login</a
 							>
 						</li>
