--- a/index.html
+++ b/index.html
@@ -44,10 +44,16 @@
 							>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link" href="#">List</a>
+							<a
+								class="nav-link"
+								href="./list-pages/listContent.html"
+								>List</a
+							>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link" href="#">Contact Us</a>
+							<a class="nav-link" href="./index.html#jumbotron"
+								>Contact Us</a
+							>
 						</li>
 						<li id="btn-decision" class="nav-item d-flex">
 							<a class="nav-link btn-login" href="./login.html"
