--- a/list-pages/listContent.html
+++ b/list-pages/listContent.html
@@ -10,29 +10,85 @@
 			integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi"
 			crossorigin="anonymous"
 		/>
-		<link rel="stylesheet" href="./styles/ListStyles.css">
-        
+		<link rel="stylesheet" href="./styles/ListStyles.css" />
+		<link rel="stylesheet" href="../styles/navbar.css" />
+
 		<title>Job Advertizing</title>
 	</head>
 	<body>
+		<!-- ------- Navbar ------- -->
 
-        <!--Awal Content Search-->
-        <div class="container mt-5 mb-3">
-            <div class="d-flex form-inputs">
-                <input class="form-control" type="text" placeholder="Search any product..." name="searchInput" id="searchInput">
-                <i class="bx bx-search"></i>
-            </div>
-        </div>
-        <!--Akhir Content Search-->
+		<nav class="navbar navbar-expand-lg">
+			<div class="container">
+				<a class="navbar-brand" href="../index.html"
+					>Job Advertizing.</a
+				>
+				<button
+					class="navbar-toggler"
+					type="button"
+					data-bs-toggle="collapse"
+					data-bs-target="#navbarNav"
+					aria-controls="navbarNav"
+					aria-expanded="false"
+					aria-label="Toggle navigation"
+				>
+					<span class="navbar-toggler-icon"></span>
+				</button>
+				<div class="collapse navbar-collapse" id="navbarNav">
+					<ul class="navbar-nav ms-auto">
+						<li class="nav-item">
+							<a
+								class="nav-link"
+								aria-current="page"
+								href="../index.html"
+								>Home</a
+							>
+						</li>
+						<li class="nav-item">
+							<a
+								class="nav-link"
+								href="../list-pages/listContent.html"
+								>List</a
+							>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="../index.html#jumbotron"
+								>Contact Us</a
+							>
+						</li>
+						<li id="btn-decision" class="nav-item d-flex">
+							<a class="nav-link btn-login" href="../login.html"
+								>Login</a
+							>
+						</li>
+					</ul>
+				</div>
+			</div>
+		</nav>
 
-        <!--Awal Content Cards-->
-        <div class="container mt-5 mb-3">
-            <div class="row" id="content">
-            </div>
-        </div>
-        <!--Akhir Content Cards-->
+		<!-- ------- End Navbar ------- -->
+		<!--Awal Content Search-->
+		<div class="container mt-5 mb-3">
+			<div class="d-flex form-inputs">
+				<input
+					class="form-control"
+					type="text"
+					placeholder="Search any product..."
+					name="searchInput"
+					id="searchInput"
+				/>
+				<i class="bx bx-search"></i>
+			</div>
+		</div>
+		<!--Akhir Content Search-->
 
-        <script src="./scripts/ContentList.js"></script>
+		<!--Awal Content Cards-->
+		<div class="container mt-5 mb-3">
+			<div class="row" id="content"></div>
+		</div>
+		<!--Akhir Content Cards-->
+
+		<script src="./scripts/ContentList.js"></script>
 
 		<script
 			src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
