--- a/login.html
+++ b/login.html
@@ -15,10 +15,59 @@
 
 		<!-- CSS Custom -->
 		<link rel="stylesheet" href="./styles/login.css" />
+		<link rel="stylesheet" href="./styles/navbar.css" />
 
 		<title>Job Advertizing</title>
 	</head>
 	<body>
+		<!-- ------- Navbar ------- -->
+
+		<nav class="navbar navbar-expand-lg">
+			<div class="container">
+				<a class="navbar-brand" href="./index.html">Job Advertizing.</a>
+				<button
+					class="navbar-toggler"
+					type="button"
+					data-bs-toggle="collapse"
+					data-bs-target="#navbarNav"
+					aria-controls="navbarNav"
+					aria-expanded="false"
+					aria-label="Toggle navigation"
+				>
+					<span class="navbar-toggler-icon"></span>
+				</button>
+				<div class="collapse navbar-collapse" id="navbarNav">
+					<ul class="navbar-nav ms-auto">
+						<li class="nav-item">
+							<a
+								class="nav-link"
+								aria-current="page"
+								href="./index.html"
+								>Home</a
+							>
+						</li>
+						<li class="nav-item">
+							<a
+								class="nav-link"
+								href="./list-pages/listContent.html"
+								>List</a
+							>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="./index.html#jumbotron"
+								>Contact Us</a
+							>
+						</li>
+						<li id="btn-decision" class="nav-item d-flex">
+							<a class="nav-link btn-login" href="#">Login</a>
+						</li>
+					</ul>
+				</div>
+			</div>
+		</nav>
+
+		<!-- ------- End Navbar ------- -->
+
 		<!-- ------- Login Form ------- -->
 
 		<section id="login-content">
@@ -75,7 +124,9 @@
 							<p>
 								Anda belum punya akun?
 								<span class="registers-page"
-									><a href="#">Klik disini</a></span
+									><a href="./regis.html"
+										>Klik disini</a
+									></span
 								>
 							</p>
 						</form>
@@ -87,7 +138,8 @@
 		<!-- ------- End Login Form ------- -->
 
 		<!-- JS Custom -->
-		<script src="./scripts/script.js"></script>
+		<script src="./scripts/login.js"></script>
+		<script src="./scripts/main.js"></script>
 
 		<!-- Bootstrap JS -->
 		<script
