--- a/regis.html
+++ b/regis.html
@@ -9,6 +9,7 @@
 
 		<!-- CSS -->
 		<link rel="stylesheet" href="./styles/regis.css" />
+		<link rel="stylesheet" href="./styles/navbar.css" />
 
 		<!-- Bootstrap CSS -->
 		<link
@@ -19,6 +20,55 @@
 		/>
 	</head>
 	<body>
+		<!-- ------- Navbar ------- -->
+
+		<nav class="navbar navbar-expand-lg">
+			<div class="container">
+				<a class="navbar-brand" href="./index.html">Job Advertizing.</a>
+				<button
+					class="navbar-toggler"
+					type="button"
+					data-bs-toggle="collapse"
+					data-bs-target="#navbarNav"
+					aria-controls="navbarNav"
+					aria-expanded="false"
+					aria-label="Toggle navigation"
+				>
+					<span class="navbar-toggler-icon"></span>
+				</button>
+				<div class="collapse navbar-collapse" id="navbarNav">
+					<ul class="navbar-nav ms-auto">
+						<li class="nav-item">
+							<a
+								class="nav-link"
+								aria-current="page"
+								href="./index.html"
+								>Home</a
+							>
+						</li>
+						<li class="nav-item">
+							<a
+								class="nav-link"
+								href="list-pages/listContent.html"
+								>List</a
+							>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="./index.html#jumbotron"
+								>Contact Us</a
+							>
+						</li>
+						<li id="btn-decision" class="nav-item d-flex">
+							<a class="nav-link btn-login" href="./login.html"
+								>Login</a
+							>
+						</li>
+					</ul>
+				</div>
+			</div>
+		</nav>
+
+		<!-- ------- End Navbar ------- -->
 		<!-- ------- Registration Form ------- -->
 
 		<section id="regis-content">
