--- a/index.html
+++ b/index.html
@@ -169,4 +169,10 @@
 			crossorigin="anonymous"
 		></script>
 	</body>
+	<style>
+		footer {
+			background-color: #ff7096;
+			height: 7vh;
+		}
+	</style>
 </html>
