--- a/login.html
+++ b/login.html
@@ -134,7 +134,11 @@
 				</div>
 			</div>
 		</section>
-
+		<!-- footer start -->
+		<footer class="row m-0 p-0">
+			<div class="footer m-0 p-0"></div>
+		</footer>
+		<!-- footer end -->
 		<!-- ------- End Login Form ------- -->
 
 		<!-- JS Custom -->
@@ -148,4 +152,10 @@
 			crossorigin="anonymous"
 		></script>
 	</body>
+	<style>
+		footer {
+			background-color: #ff7096;
+			height: 7vh;
+		}
+	</style>
 </html>
