--- a/detail-pages/content.html
+++ b/detail-pages/content.html
@@ -117,11 +117,12 @@
 			integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
 			crossorigin="anonymous"
 		></script>
+		<script src="./scripts/main.js"></script>
 	</body>
 	<style>
 		footer {
 			background-color: #ff7096;
-			height: 10vh;
+			height: 7vh;
 		}
 	</style>
 </html>
