--- a/list-pages/listContent.html
+++ b/list-pages/listContent.html
@@ -89,6 +89,9 @@
 		<!--Akhir Content Cards-->
 
 		<script src="./scripts/ContentList.js"></script>
+		<script src="../scripts/main.js"></script>
+
+		<script src="../scripts/login.js"></script>
 
 		<script
 			src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
