--- a/list-pages/listContent.html
+++ b/list-pages/listContent.html
@@ -88,6 +88,12 @@
 		</div>
 		<!--Akhir Content Cards-->
 
+		<!-- footer start -->
+		<footer class="row m-0 p-0">
+			<div class="footer m-0 p-0"></div>
+		</footer>
+		<!-- footer end -->
+
 		<script src="./scripts/ContentList.js"></script>
 		<script src="../scripts/main.js"></script>
 
@@ -99,4 +105,10 @@
 			crossorigin="anonymous"
 		></script>
 	</body>
+	<style>
+		footer {
+			background-color: #ff7096;
+			height: 7vh;
+		}
+	</style>
 </html>
