--- a/regis.html
+++ b/regis.html
@@ -147,7 +147,11 @@
 				</div>
 			</div>
 		</section>
-
+		<!-- footer start -->
+		<footer class="row m-0 p-0">
+			<div class="footer m-0 p-0"></div>
+		</footer>
+		<!-- footer end -->
 		<!-- ------- End Login Form ------- -->
 
 		<!-- JS Custom -->
