linked regis with login

--- a/regis.html
+++ b/regis.html
@@ -139,7 +139,9 @@
 							<p>
 								Anda sudah punya akun?
 								<span class="login-page"
-									><a href="#">Klik disini</a></span
+									><a href="./login.html"
+										>Klik disini</a
+									></span
 								>
 							</p>
 						</form>
